# PetProject

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  Makefile  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: lint.yaml
Home/: asgi.py  settings.py  urls.py  wsgi.py
PetProject/PetProject/: asgi.py  settings.py  urls.py  wsgi.py
app/: models.py  urls.py
app/migrations/: 0001_initial.py
frontend/home/: .pre-commit-config.yaml  package-lock.json  package.json
github/workflows/: lint.yaml
