[tool.poetry]
name = "Petproject"
version = "1"
description = "Petproject"
authors = ["MelekhSV"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.1.0"
make = "^0.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
